adding button image assets

--- a/ShrinkMeister/Views/ProcessCell.xib
+++ b/ShrinkMeister/Views/ProcessCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="16A285a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -18,11 +18,17 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7DS-s7-0ou">
-                    <rect key="frame" x="0.0" y="0.0" width="90" height="70"/>
+                    <rect key="frame" x="25" y="25" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="MMF-1J-ahL"/>
+                        <constraint firstAttribute="height" constant="40" id="NCF-WK-VEc"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="7DS-s7-0ou" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3jh-96-y2X"/>
+                <constraint firstItem="7DS-s7-0ou" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="7ea-zv-rbN"/>
                 <constraint firstItem="7DS-s7-0ou" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="83f-JZ-s33"/>
                 <constraint firstAttribute="bottom" secondItem="d0i-oM-VvV" secondAttribute="bottom" id="Plz-tD-9dU"/>
                 <constraint firstItem="7DS-s7-0ou" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Tlm-dq-OyA"/>
@@ -31,6 +37,17 @@
                 <constraint firstAttribute="trailing" secondItem="7DS-s7-0ou" secondAttribute="trailing" id="nAl-z9-uej"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="d0i-oM-VvV"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="83f-JZ-s33"/>
+                    <exclude reference="Tlm-dq-OyA"/>
+                    <exclude reference="jJH-Ae-cya"/>
+                    <exclude reference="nAl-z9-uej"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="image" destination="7DS-s7-0ou" id="nju-h3-ZAc"/>
                 <outlet property="label" destination="d0i-oM-VvV" id="pnC-DC-a9S"/>
