finished basic icons fixed bug on cropRect generate

--- a/ShrinkMeister/Views/ProcessViewCrop.xib
+++ b/ShrinkMeister/Views/ProcessViewCrop.xib
@@ -28,12 +28,18 @@
                     </segments>
                 </segmentedControl>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FVd-Mz-sqe">
-                    <rect key="frame" x="486" y="10" width="30" height="30"/>
-                    <state key="normal" title="T."/>
+                    <rect key="frame" x="353" y="15" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="mfE-wS-07w"/>
+                        <constraint firstAttribute="width" constant="20" id="mlb-8r-xSQ"/>
+                    </constraints>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="geH-JL-YFL">
-                    <rect key="frame" x="440" y="10" width="30" height="30"/>
-                    <state key="normal" title="L."/>
+                    <rect key="frame" x="313" y="15" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="JMq-Ku-bwH"/>
+                        <constraint firstAttribute="width" constant="20" id="L6V-17-5mo"/>
+                    </constraints>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -41,17 +47,21 @@
                 <constraint firstItem="geH-JL-YFL" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="98V-0D-I5G"/>
                 <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
                 <constraint firstItem="nfV-MW-wCM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Qtj-tD-PZp"/>
+                <constraint firstItem="FVd-Mz-sqe" firstAttribute="leading" secondItem="geH-JL-YFL" secondAttribute="trailing" constant="20" id="bP1-4v-zku"/>
                 <constraint firstItem="nfV-MW-wCM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="ef0-8f-lr4"/>
                 <constraint firstItem="FVd-Mz-sqe" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="g8l-fr-fAs"/>
                 <constraint firstItem="nfV-MW-wCM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="k7y-94-nLR"/>
                 <constraint firstItem="THv-PM-XBl" firstAttribute="leading" secondItem="FVd-Mz-sqe" secondAttribute="trailing" constant="26" id="qlB-eL-cVP"/>
                 <constraint firstItem="THv-PM-XBl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="soj-OB-hNR"/>
+                <constraint firstItem="geH-JL-YFL" firstAttribute="leading" secondItem="nfV-MW-wCM" secondAttribute="trailing" constant="20" id="u7u-DW-pap"/>
                 <constraint firstItem="FVd-Mz-sqe" firstAttribute="leading" secondItem="geH-JL-YFL" secondAttribute="trailing" constant="16" id="ydf-mu-IeA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="Qtj-tD-PZp"/>
+                    <exclude reference="ydf-mu-IeA"/>
+                    <exclude reference="qlB-eL-cVP"/>
                 </mask>
             </variation>
             <connections>
