--- a/ShrinkMeister/Views/ProcessViewBasic.xib
+++ b/ShrinkMeister/Views/ProcessViewBasic.xib
@@ -19,7 +19,7 @@
                     </constraints>
                 </button>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Nlv-Nm-unl">
-                    <rect key="frame" x="170" y="11" width="182" height="29"/>
+                    <rect key="frame" x="338" y="11" width="182" height="29"/>
                     <segments>
                         <segment title="First"/>
                         <segment title="Second"/>
@@ -27,23 +27,30 @@
                     </segments>
                 </segmentedControl>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ir5-nO-qAB">
-                    <rect key="frame" x="90" y="10" width="30" height="30"/>
-                    <state key="normal" title="R."/>
+                    <rect key="frame" x="100" y="10" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="dKr-i4-GtP"/>
+                        <constraint firstAttribute="width" constant="30" id="lFr-s1-qPc"/>
+                    </constraints>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l8F-6y-jKx">
                     <rect key="frame" x="50" y="10" width="30" height="30"/>
-                    <state key="normal" title="L."/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="1HT-Nv-jEi"/>
+                        <constraint firstAttribute="height" constant="30" id="NKO-b6-cC8"/>
+                    </constraints>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Nlv-Nm-unl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="1Fg-Sf-lES"/>
                 <constraint firstItem="l8F-6y-jKx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="6BI-oG-gTZ"/>
-                <constraint firstItem="ir5-nO-qAB" firstAttribute="leading" secondItem="l8F-6y-jKx" secondAttribute="trailing" constant="10" id="6GR-4Y-CWe"/>
+                <constraint firstItem="ir5-nO-qAB" firstAttribute="leading" secondItem="l8F-6y-jKx" secondAttribute="trailing" constant="20" id="6GR-4Y-CWe"/>
                 <constraint firstItem="l8F-6y-jKx" firstAttribute="leading" secondItem="Nlv-Nm-unl" secondAttribute="trailing" constant="50" id="9D9-j7-1xg"/>
                 <constraint firstItem="Nlv-Nm-unl" firstAttribute="leading" secondItem="ir5-nO-qAB" secondAttribute="trailing" constant="50" id="HBw-zT-AWt"/>
                 <constraint firstItem="l8F-6y-jKx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K8A-pV-pHH"/>
                 <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
+                <constraint firstAttribute="trailing" secondItem="Nlv-Nm-unl" secondAttribute="trailing" constant="80" id="URi-oo-acg"/>
                 <constraint firstItem="Nlv-Nm-unl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="Wfc-sC-hpX"/>
                 <constraint firstItem="ir5-nO-qAB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="pnv-aI-xi5"/>
                 <constraint firstItem="Nlv-Nm-unl" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sVg-qU-YkD"/>
@@ -53,6 +60,7 @@
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="9D9-j7-1xg"/>
+                    <exclude reference="HBw-zT-AWt"/>
                     <exclude reference="Wfc-sC-hpX"/>
                     <exclude reference="sVg-qU-YkD"/>
                 </mask>
