--- a/ShrinkMeister/Views/ProcessViewCustom.xib
+++ b/ShrinkMeister/Views/ProcessViewCustom.xib
@@ -12,7 +12,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cyS-Xo-vzZ">
-                    <rect key="frame" x="190" y="10" width="50" height="30"/>
+                    <rect key="frame" x="30" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="GGI-1k-k3a"/>
                     </constraints>
@@ -20,7 +20,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QN1-UD-qUE">
-                    <rect key="frame" x="275" y="10" width="50" height="30"/>
+                    <rect key="frame" x="115" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="oOr-rv-Red"/>
                     </constraints>
@@ -35,14 +35,14 @@
                     </constraints>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppv-PK-NXK">
-                    <rect key="frame" x="345" y="15" width="20" height="20"/>
+                    <rect key="frame" x="185" y="15" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="Ec4-G3-3op"/>
                         <constraint firstAttribute="width" constant="20" id="NZD-ug-j2P"/>
                     </constraints>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaI-AZ-hJ2">
-                    <rect key="frame" x="252" y="14" width="18" height="21"/>
+                    <rect key="frame" x="92" y="14" width="18" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -53,6 +53,7 @@
                 <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="20" id="8jB-OU-VUL"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="35" id="Bee-L6-u9q"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Bel-Nc-UJM"/>
+                <constraint firstItem="cyS-Xo-vzZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="BtS-e7-AeS"/>
                 <constraint firstAttribute="trailing" secondItem="P0X-2l-cDO" secondAttribute="trailing" constant="28" id="E9h-Zm-bfB"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Exl-4a-yYJ"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K7M-xh-685"/>
@@ -67,6 +68,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="Bel-Nc-UJM"/>
                     <exclude reference="R88-fb-xq3"/>
                     <exclude reference="Wga-ox-Bwb"/>
                     <exclude reference="kFk-av-29P"/>
