--- a/ShrinkMeister/Views/Base.lproj/MainViewController.xib
+++ b/ShrinkMeister/Views/Base.lproj/MainViewController.xib
@@ -14,6 +14,8 @@
                 <outlet property="photoResolutionLabel" destination="sRi-3Q-Qv7" id="yp6-LK-U3a"/>
                 <outlet property="photoSizeLabel" destination="BkU-Kf-jux" id="EaC-IX-e9O"/>
                 <outlet property="processCollection" destination="CAt-ZF-fx6" id="lGg-1W-nhY"/>
+                <outlet property="resolutionView" destination="nK5-Aq-FgH" id="ENT-E4-RyF"/>
+                <outlet property="sizeView" destination="6IF-jt-qfY" id="mAh-0f-7lp"/>
                 <outlet property="twoFingerTapGestureRecognizer" destination="BDA-bX-CgY" id="WMz-33-1Mf"/>
                 <outlet property="view" destination="iN0-l3-epB" id="kKr-SF-l94"/>
             </connections>
@@ -23,18 +25,42 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1024x768" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRi-3Q-Qv7">
-                    <rect key="frame" x="50" y="80" width="77" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkU-Kf-jux">
-                    <rect key="frame" x="508" y="80" width="42" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nK5-Aq-FgH">
+                    <rect key="frame" x="30" y="70" width="150" height="40"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1024x768" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRi-3Q-Qv7">
+                            <rect key="frame" x="36" y="10" width="77" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="sRi-3Q-Qv7" firstAttribute="centerY" secondItem="nK5-Aq-FgH" secondAttribute="centerY" id="PdK-T5-0mg"/>
+                        <constraint firstItem="sRi-3Q-Qv7" firstAttribute="centerX" secondItem="nK5-Aq-FgH" secondAttribute="centerX" id="jyO-5q-kvM"/>
+                        <constraint firstAttribute="height" constant="40" id="nPU-bp-f5o"/>
+                        <constraint firstAttribute="width" constant="150" id="wAS-9p-c80"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6IF-jt-qfY">
+                    <rect key="frame" x="420" y="70" width="150" height="40"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkU-Kf-jux">
+                            <rect key="frame" x="54" y="10" width="42" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="BkU-Kf-jux" firstAttribute="centerY" secondItem="6IF-jt-qfY" secondAttribute="centerY" id="7xE-zi-nNF"/>
+                        <constraint firstItem="BkU-Kf-jux" firstAttribute="centerX" secondItem="6IF-jt-qfY" secondAttribute="centerX" id="AK4-3X-7mE"/>
+                        <constraint firstAttribute="height" constant="40" id="nac-sZ-0aK"/>
+                        <constraint firstAttribute="width" constant="150" id="xUR-Ht-XCL"/>
+                    </constraints>
+                </view>
                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HeW-8H-JHf" customClass="CroppableImageView" customModule="ShrinkMeister" customModuleProvider="target">
                     <rect key="frame" x="5" y="5" width="590" height="495"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -74,27 +100,23 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="sRi-3Q-Qv7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="80" id="1Vd-s4-rhV"/>
                 <constraint firstAttribute="bottom" secondItem="CAt-ZF-fx6" secondAttribute="bottom" id="2es-zo-XZD"/>
-                <constraint firstAttribute="trailing" secondItem="BkU-Kf-jux" secondAttribute="trailing" constant="50" id="4Jm-f5-1x6"/>
                 <constraint firstItem="HeW-8H-JHf" firstAttribute="width" secondItem="SZ2-xc-5AQ" secondAttribute="width" id="5Dk-DQ-2Au"/>
                 <constraint firstAttribute="trailing" secondItem="HeW-8H-JHf" secondAttribute="trailing" constant="180" id="Axy-oH-BBE"/>
                 <constraint firstItem="SZ2-xc-5AQ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="CA3-ZU-26q"/>
+                <constraint firstAttribute="trailing" secondItem="6IF-jt-qfY" secondAttribute="trailing" constant="30" id="Hqt-tY-aXt"/>
                 <constraint firstAttribute="bottom" secondItem="SZ2-xc-5AQ" secondAttribute="bottom" constant="100" id="JdQ-Fe-zmj"/>
                 <constraint firstItem="HeW-8H-JHf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="236" id="M9l-ow-qoN"/>
                 <constraint firstItem="HeW-8H-JHf" firstAttribute="centerX" secondItem="SZ2-xc-5AQ" secondAttribute="centerX" id="ToC-yV-f55"/>
+                <constraint firstItem="6IF-jt-qfY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="70" id="Uv1-a4-qM9"/>
                 <constraint firstItem="CAt-ZF-fx6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Vzv-qd-MUt"/>
-                <constraint firstItem="sRi-3Q-Qv7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-100" id="Wwh-7K-fMc"/>
-                <constraint firstItem="sRi-3Q-Qv7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="bgS-eW-ppx"/>
+                <constraint firstItem="nK5-Aq-FgH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="ZxK-QI-AZs"/>
                 <constraint firstItem="SZ2-xc-5AQ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="c8X-hK-727"/>
+                <constraint firstItem="nK5-Aq-FgH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="70" id="fEz-Vo-zOw"/>
                 <constraint firstItem="HeW-8H-JHf" firstAttribute="centerY" secondItem="SZ2-xc-5AQ" secondAttribute="centerY" id="i80-qb-SQn"/>
-                <constraint firstItem="BkU-Kf-jux" firstAttribute="centerY" secondItem="sRi-3Q-Qv7" secondAttribute="centerY" id="ifF-4s-h9I"/>
                 <constraint firstItem="HeW-8H-JHf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="180" id="rL4-rt-Zio"/>
-                <constraint firstItem="sRi-3Q-Qv7" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="sVo-nz-sKc"/>
                 <constraint firstItem="HeW-8H-JHf" firstAttribute="height" secondItem="SZ2-xc-5AQ" secondAttribute="height" id="uLu-BU-S7u"/>
                 <constraint firstAttribute="trailing" secondItem="SZ2-xc-5AQ" secondAttribute="trailing" constant="5" id="uh9-z9-5qj"/>
-                <constraint firstItem="sRi-3Q-Qv7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="wt3-Vk-IbW"/>
-                <constraint firstItem="sRi-3Q-Qv7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="xoO-dC-xJz"/>
                 <constraint firstAttribute="trailing" secondItem="CAt-ZF-fx6" secondAttribute="trailing" id="yVf-dG-iui"/>
             </constraints>
             <variation key="default">
@@ -102,10 +124,6 @@
                     <exclude reference="Axy-oH-BBE"/>
                     <exclude reference="M9l-ow-qoN"/>
                     <exclude reference="rL4-rt-Zio"/>
-                    <exclude reference="Wwh-7K-fMc"/>
-                    <exclude reference="bgS-eW-ppx"/>
-                    <exclude reference="sVo-nz-sKc"/>
-                    <exclude reference="wt3-Vk-IbW"/>
                 </mask>
             </variation>
         </view>
