--- a/ShrinkMeister/Views/ProcessViewCustom.xib
+++ b/ShrinkMeister/Views/ProcessViewCustom.xib
@@ -8,7 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProcessViewCustom" customModule="ShrinkMeister" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cyS-Xo-vzZ">
@@ -28,47 +28,62 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P0X-2l-cDO">
-                    <rect key="frame" x="542" y="10" width="30" height="30"/>
+                    <rect key="frame" x="342" y="10" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="HW0-N5-psE"/>
                         <constraint firstAttribute="height" constant="30" id="WhC-xQ-HSp"/>
                     </constraints>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppv-PK-NXK">
-                    <rect key="frame" x="185" y="15" width="20" height="20"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dgJ-PA-5JU">
+                    <rect key="frame" x="200" y="10" width="50" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="ekM-lJ-wey"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IpM-jB-NTK">
+                    <rect key="frame" x="260" y="10" width="30" height="30"/>
+                    <state key="normal" title="kB">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppv-PK-NXK">
+                    <rect key="frame" x="88" y="16" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="Ec4-G3-3op"/>
                         <constraint firstAttribute="width" constant="20" id="NZD-ug-j2P"/>
                     </constraints>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WaI-AZ-hJ2">
-                    <rect key="frame" x="92" y="14" width="18" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="WaI-AZ-hJ2" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="8Vk-8n-lbu"/>
                 <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="20" id="8jB-OU-VUL"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="35" id="Bee-L6-u9q"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Bel-Nc-UJM"/>
                 <constraint firstItem="cyS-Xo-vzZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="BtS-e7-AeS"/>
+                <constraint firstItem="IpM-jB-NTK" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="C0y-1Y-boK"/>
+                <constraint firstItem="dgJ-PA-5JU" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="40" id="DhX-mP-ogs"/>
                 <constraint firstAttribute="trailing" secondItem="P0X-2l-cDO" secondAttribute="trailing" constant="28" id="E9h-Zm-bfB"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Exl-4a-yYJ"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K7M-xh-685"/>
+                <constraint firstItem="dgJ-PA-5JU" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="35" id="Nfx-hC-OpZ"/>
+                <constraint firstItem="dgJ-PA-5JU" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QEn-RF-DOh"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="25" id="R88-fb-xq3"/>
                 <constraint firstItem="cyS-Xo-vzZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="V1u-El-GaA"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="28" id="Wga-ox-Bwb"/>
-                <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="WaI-AZ-hJ2" secondAttribute="trailing" constant="5" id="Xxh-wD-Dbl"/>
                 <constraint firstItem="ppv-PK-NXK" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Ylv-fB-OWy"/>
-                <constraint firstItem="WaI-AZ-hJ2" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="12" id="h7b-yg-Sfs"/>
+                <constraint firstItem="IpM-jB-NTK" firstAttribute="leading" secondItem="dgJ-PA-5JU" secondAttribute="trailing" constant="10" id="Yly-Jr-ku7"/>
+                <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="7" id="eID-FN-pgu"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="31" id="kFk-av-29P"/>
+                <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="8" id="s7B-mu-4IE"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="8jB-OU-VUL"/>
                     <exclude reference="Bel-Nc-UJM"/>
+                    <exclude reference="DhX-mP-ogs"/>
                     <exclude reference="R88-fb-xq3"/>
                     <exclude reference="Wga-ox-Bwb"/>
                     <exclude reference="kFk-av-29P"/>
@@ -78,6 +93,8 @@
                 <outlet property="confirmButton" destination="P0X-2l-cDO" id="DFS-Ct-ABN"/>
                 <outlet property="heightField" destination="QN1-UD-qUE" id="8qc-pS-VtV"/>
                 <outlet property="lockAspectButton" destination="ppv-PK-NXK" id="cNa-HC-1Nq"/>
+                <outlet property="sizeField" destination="dgJ-PA-5JU" id="bWq-AX-k4W"/>
+                <outlet property="toggleSizeButton" destination="IpM-jB-NTK" id="fpF-Km-4fy"/>
                 <outlet property="widthField" destination="cyS-Xo-vzZ" id="7HU-jj-YWR"/>
             </connections>
             <point key="canvasLocation" x="243" y="180"/>
