--- a/ShrinkMeister/Views/ProcessViewExport.xib
+++ b/ShrinkMeister/Views/ProcessViewExport.xib
@@ -16,8 +16,11 @@
                     <state key="normal" title="Export"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cgq-2f-AJu">
-                    <rect key="frame" x="504" y="10" width="47" height="30"/>
-                    <state key="normal" title="Others"/>
+                    <rect key="frame" x="521" y="10" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="I5L-g2-ILE"/>
+                        <constraint firstAttribute="height" constant="30" id="iqj-vL-gF4"/>
+                    </constraints>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
